[gd_scene load_steps=8 format=3 uid="uid://bk5w8djmm4tnd"]

[ext_resource type="Script" path="res://Assets/Scripts/UI/SpellInfo.gd" id="1_wpnjr"]
[ext_resource type="Texture2D" uid="uid://pd4hnokqsm54" path="res://Assets/Sprites/Spells/Icons/fireball.png" id="2_2pkbf"]
[ext_resource type="Texture2D" uid="uid://w7fes77n5h5u" path="res://Assets/Sprites/Elements/fire.png" id="3_ebjg7"]
[ext_resource type="Script" path="res://Assets/Scripts/UI/SlantedList.gd" id="4_t1kn8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qqvkh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j0n73"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ixui"]
bg_color = Color(0.6, 0.6, 0.6, 0.121569)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.8, 0.8, 0.415686)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[node name="SpellInfo" type="Panel"]
offset_left = 301.0
offset_top = 38.0
offset_right = 524.0
offset_bottom = 225.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_qqvkh")
script = ExtResource("1_wpnjr")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_bottom = 64.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_j0n73")

[node name="SpellIcon" type="TextureRect" parent="PanelContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture = ExtResource("2_2pkbf")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 11.0
offset_top = 6.0
offset_right = -69.0
offset_bottom = 24.0
grow_horizontal = 2
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_7ixui")
text = "Fireball"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="NameLabel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -9.0
offset_right = 18.0
offset_bottom = 9.0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("3_ebjg7")

[node name="TopRows" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = 29.0
offset_right = -74.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_t1kn8")

[node name="Damage" type="Control" parent="TopRows"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="Label" type="Label" parent="TopRows/Damage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
grow_horizontal = 2
grow_vertical = 2
text = "5 fire damage"
vertical_alignment = 1

[node name="Divider" type="ColorRect" parent="TopRows/Damage"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
grow_horizontal = 2
grow_vertical = 0
color = Color(1, 1, 1, 0.133333)

[node name="ManaCost" type="Control" parent="TopRows"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="Label" type="Label" parent="TopRows/ManaCost"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
grow_horizontal = 2
grow_vertical = 2
text = "Uses 3 mana"
vertical_alignment = 1

[node name="Divider" type="ColorRect" parent="TopRows/ManaCost"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
grow_horizontal = 2
grow_vertical = 0
color = Color(1, 1, 1, 0.133333)

[node name="SpeedOrCooldown" type="Control" parent="TopRows"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="Label" type="Label" parent="TopRows/SpeedOrCooldown"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
grow_horizontal = 2
grow_vertical = 2
text = "Very fast speed"
vertical_alignment = 1

[node name="Divider" type="ColorRect" parent="TopRows/SpeedOrCooldown"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
grow_horizontal = 2
grow_vertical = 0
color = Color(1, 1, 1, 0.133333)

[node name="Knockback" type="Control" parent="TopRows"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="Label" type="Label" parent="TopRows/Knockback"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
grow_horizontal = 2
grow_vertical = 2
text = "Low knockback"
vertical_alignment = 1

[node name="Divider" type="ColorRect" parent="TopRows/Knockback"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
grow_horizontal = 2
grow_vertical = 0
color = Color(1, 1, 1, 0.133333)

[node name="Description" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 33.0
offset_top = 109.0
offset_right = 17.0
offset_bottom = 180.0
grow_horizontal = 2
text = "Shoots balls of fire."
